--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git VSCODE</title>
+    <link rel="stylesheet" type="" href="estilo.css">
 </head>
 <body>
-    <!--DIV CONTENEDOR 3-->
-    <div class="container">
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, vero.</p>
-        </div>
-    </div>
+    <section>
+        <article><p>Esta es una <span>frase</span> bastante larga</p></article>
+    </section>
 </body>
 </html>
