--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="uno">
-    <section class="primero">
+    <section class="primero 121212">
         <article>
             <h1>SOCIOLOGIA</h1>
             <p>Lorem ipsum dolor sit amet <span>CACUCA</span>, adipisicing elit. Sequi ipsum non architecto iure exercitationem natus. Commodi deleniti expedita quo minus laborum veniam suscipit, sunt unde, totam, quod omnis perspiciatis cumque!</p>
